--- a/.github/workflows/Recovery-Builder-SHRP.yml
+++ b/.github/workflows/Recovery-Builder-SHRP.yml
@@ -82,6 +82,17 @@ jobs:
             build-essential libgtk-3-dev libglu1-mesa-dev freeglut3-dev git libxml2 lzop pngcrush schedtool squashfs-tools \
             imagemagick libbz2-dev lzma ncftp qemu-user-static libstdc++-10-dev libncurses6 python3 tar
 
+   - name: Ensure python2 + nsjail
+      run: |
+        sudo apt update
+        sudo apt install -y python2 || true
+        if ! command -v python2.7 >/dev/null 2>&1 && command -v python2 >/dev/null 2>&1; then
+          sudo ln -s "$(command -v python2)" /usr/bin/python2.7 || true
+        fi
+        # optional try enable userns (will likely fail on hosted runners)
+        sudo sysctl -w kernel.unprivileged_userns_clone=1 || true
+        sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0 || true
+
     - name: Install OpenJDK
       uses: actions/setup-java@v4
       with:
